force-app/main/default/src/objects/HealthCloudGA__EHRProcedurePerformer__c/HealthCloudGA__EHRProcedurePerformer__c.object-meta.xml
<CustomObject>
    <description>Junction object between EHR Procedure and EHR Practitioner. Used to identify the practitioners that were involved in a procedure and the role they played.</description>
    <label>EHR Procedure Performer</label>
    <nameField>
        <displayFormat>ProcPerformer - {0}</displayFormat>
        <label>EHR Procedure Performer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Procedure Performers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>