force-app/main/default/src/objects/HealthCloudGA__EHRProcedurePerformer__c/fields/HealthCloudGA__EHRPractitioner__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EHRPractitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Practitioner involved in the procedure.</description>
    <label>Performer</label>
    <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
    <relationshipLabel>EHR Procedure Performers</relationshipLabel>
    <relationshipName>EHRProcedurePerformers</relationshipName>
    <type>Lookup</type>
</CustomField>