force-app/main/default/src/objects/HealthCloudGA__EHRProcedurePerformer__c/fields/HealthCloudGA__EHRProcedure__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EHRProcedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Procedure performed by the practitioner.</description>
    <label>Procedure</label>
    <referenceTo>HealthCloudGA__EHRProcedure__c</referenceTo>
    <relationshipLabel>EHR Procedure Performers</relationshipLabel>
    <relationshipName>EHRProcedurePerformers</relationshipName>
    <type>Lookup</type>
</CustomField>