force-app/main/default/src/objects/HealthCloudGA__EHRProcedurePerformer__c/fields/HealthCloudGA__PerformerRole__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PerformerRole__c</fullName>
    <description>Practitioner&apos;s role during the procedure.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Performer Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>